💄 improved dark mode fixed icons

--- a/files/css/_base.scss
+++ b/files/css/_base.scss
@@ -397,11 +397,6 @@ hr {
     body.dark &.invert-when-dark {
         filter: invert(1);
     }
-    @media (prefers-color-scheme: dark) {
-        &.invert-when-dark {
-            filter: invert(1);
-        }
-    }
 }
 
 .loader {
